--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_KEY = jjsGbHJkxo7Q8tm5qDeiSMZH6tD8b 
+API_KEY =  
 BASE_URL = https://api.distancematrix.ai/maps/api/geocode/json
 MKAD_LAT = 55.71
 MKAD_LON = 37.612
